# mlang

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  plan.md  sample.mlang  script.py  spec.md  test_lambda_simple.mlang  tmp_add_test.mlang
.github/workflows/: deploy-playground.yml  test.yml
assets/: index-BsWPOpF7.js  index-C5jB7VhW.css  index-C8G8cJYt.js  index-Di_ZNi46.css  mlang_playground_bg-DsRWrqny.wasm  mlang_playground_bg-HL2Yl0Jg.wasm
doc/: _config.yml  getting-started.md  index.md  language-tour.md
editors/vscode/mlang-lsp/: extension.js  language-configuration.json  package-lock.json  package.json
editors/zed/mlang/: extension.toml
mylang-cli/: Cargo.toml
mylang-cli/src/: main.rs
mylang-core/: Cargo.toml
mylang-core/src/: LLM.md  ast.rs  builtins.rs  error.rs  lexer.rs  lib.rs  parser.rs  smt.rs  span.rs  token.rs
mylang-core/src/compiler/: analyzer.rs  mod.rs  (+1 more)
mylang-core/tests/: external_builtins.rs  frontend.rs  new_features.rs  parser_diagnostics.rs  smt.rs
mylang-llvm-codegen/: Cargo.toml
mylang-llvm-codegen/src/: lib.rs
mylang-lsp/: Cargo.toml
mylang-lsp/src/: main.rs
mylang-playground/: Cargo.toml
mylang-playground/src/: lib.rs
mylang-wasm-codegen/: Cargo.toml
mylang-wasm-codegen/src/: builtins.wat  code_generator.rs  lib.rs
mylang-wasm-codegen/tests/: runtime.rs
playground/: index.html  package-lock.json  package.json  tsconfig.json
playground/src/: main.ts  style.css  vite-env.d.ts  wasm.d.ts
src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  token.rs
src/compiler/: analyzer.rs  builtins.wat  code_generator.rs  compiler.rs  mod.rs
src/lang/: compiler.rs  mod.rs  parser.rs
tests/: compiler_test.rs
(+119 files in other folders)
