[package]
name = "mylang-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
mylang-core = { path = "../mylang-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tower-lsp = "0.20"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
