[package]
name = "mylang-playground"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
mylang-core = { path = "../mylang-core" }
mylang-wasm-codegen = { path = "../mylang-wasm-codegen" }
wasmi = { version = "0.31", default-features = false, features = ["std"] }
wat = "1.0"
