[package]
name = "mylang-wasm-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
mylang-core = { path = "../mylang-core" }
thiserror = { workspace = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmi = "0.31"
wat = "1.240"